crates/shell/src/parser/program/tests/snapshots/omp_shell_engine__parser__program__tests__simple_commands__parse_ls.snap
---
source: brush-parser/src/parser/tests/simple_commands.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ls",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "ls",
                  loc: "[location]",
                )),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
